--- a/guessMyNumber/index.html
+++ b/guessMyNumber/index.html
@@ -37,7 +37,7 @@
           <p class="highScore">🥇 Highscore: <span class ="highScore-span"> 0 </span></p>
         </section>
         <footer>
-          <!-- Made with 💓 by  <a href="https://github.com/Bitnagar/Bitnagar">Shivam Bhatnagar</a> -->
+        <!-- If you want to use this project in your portfolio, just remove my name and add yours. -->
           Made with <span style="color: #e25555;"> &#9829; </span> by <a href="https://github.com/Bitnagar/Bitnagar">Shivam Bhatnagar</a>
         </footer>
       </main>
